# popcorntime-flatpak

./: .gitignore  README.md  install.sh  mpv  org.popcorntime.PopcornTime.json  patch_providers.py  torrentio.js
native-popcorn/: .gitignore  COPYING  README.md  api.py  install.sh  main.py  meson.build  org.popcorntime.NativePopcorn.json  player.py  test_api.py  window.py
native-popcorn/data/: meson.build  org.popcorntime.NativePopcorn.desktop
native-popcorn/data/icon/: org.popcorntime.NativePopcorn
native-popcorn/src/: meson.build  native-popcorn.in
native-popcorn/src/native_popcorn/: api.py  database.py  main.py  window.py
