install_data('org.popcorntime.NativePopcorn.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data('icon/org.popcorntime.NativePopcorn',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
  rename: 'org.popcorntime.NativePopcorn.svg'
)
